--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
   <!-- Contact number added at the very end of the page -->
   <div style="text-align:center; padding:20px 16px; color:#555; font-size:14px; background:#f8f8f8; border-top:1px solid #ddd;">
-    Contact for orders & delivery in Waliso:<br>
+    Request Info:<br>
     <strong style="color:#0066FF; font-size:16px;">0984748168</strong>
   </div>
 
