--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root {
       --green: #0066FF;
       --dark-green: #009933;
-      --bg: #f8f9fa;
+      --bg: #F8F9F9;
       --text: #333;
       --hint: #777;
       --accent: #2e7d32;
@@ -388,7 +388,7 @@
 
   <!-- Contact number added at the very end of the page -->
   <div style="text-align:center; padding:20px 16px; color:#555; font-size:14px; background:#f8f8f8; border-top:1px solid #ddd;">
-    Request Info:<br>
+    Contact us for your request<br>
     <strong style="color:#0066FF; font-size:16px;">0984748168</strong>
   </div>
 
