--- a/index.html
+++ b/index.html
@@ -149,150 +149,118 @@
     <input type="text" placeholder="Search water brands..." disabled>
   </div>
   <div class="categories">
-    <div class="category-tile" onclick="showBrand('gold')">
-      <img src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold">
-      <span>Gold Water</span>
+    <div class="category-tile" onclick="showBrand('aquaddis')">
+      <img src="https://via.placeholder.com/60?text=Aquaddis" alt="Aquaddis">
+      <span>Aquaddis</span>
     </div>
-    <div class="category-tile" onclick="showBrand('one')">
-      <img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One">
-      <span>One Water</span>
+    <div class="category-tile" onclick="showBrand('best')">
+      <img src="https://via.placeholder.com/60?text=Best" alt="Best water">
+      <span>Best water</span>
     </div>
-    <div class="category-tile" onclick="showBrand('africa')">
-      <img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa">
-      <span>Africa Water</span>
+    <div class="category-tile" onclick="showBrand('top')">
+      <img src="https://via.placeholder.com/60?text=Top" alt="Top water">
+      <span>Top water</span>
     </div>
-    <div class="category-tile" onclick="showBrand('yes')">
-      <img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes">
-      <span>Yes Water</span>
+    <div class="category-tile" onclick="showBrand('daily')">
+      <img src="https://via.placeholder.com/60?text=Daily" alt="Daily water">
+      <span>Daily water</span>
     </div>
-    <div class="category-tile" onclick="showBrand('dega')">
-      <img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega">
-      <span>Dega Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('fham')">
-      <img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham">
-      <span>Fham Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('arki')">
-      <img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki">
-      <span>Arki Water</span>
+    <div class="category-tile" onclick="showBrand('fine')">
+      <img src="https://via.placeholder.com/60?text=Fine" alt="Fine water">
+      <span>Fine water</span>
     </div>
   </div>
+
   <!-- Brand sections - each has 3 sizes/prices -->
-  <div id="gold-section" class="brand-section">
-    <div class="brand-header">Gold Water – Pure & Healthy</div>
+  <div id="aquaddis-section" class="brand-section">
+    <div class="brand-header">Aquaddis – Pure & Fresh</div>
     <div class="variant">
       <div class="variant-info">
         <div class="variant-size">0.3L</div>
         <div class="variant-price">140 Birr</div>
       </div>
-      <button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button>
+      <button class="add-btn" onclick="addToCart('Aquaddis', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info">
         <div class="variant-size">0.6L</div>
         <div class="variant-price">150 Birr</div>
       </div>
-      <button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button>
+      <button class="add-btn" onclick="addToCart('Aquaddis', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info">
         <div class="variant-size">2L</div>
         <div class="variant-price">160 Birr</div>
       </div>
-      <button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button>
+      <button class="add-btn" onclick="addToCart('Aquaddis', '2L', 160)">+</button>
     </div>
   </div>
-  <div id="one-section" class="brand-section">
-    <div class="brand-header">One Water – Fresh Daily</div>
+
+  <div id="best-section" class="brand-section">
+    <div class="brand-header">Best Water – Quality First</div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('One Water', '0.3L', 140)">+</button>
+      <button class="add-btn" onclick="addToCart('Best water', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('One Water', '0.6L', 150)">+</button>
+      <button class="add-btn" onclick="addToCart('Best water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('One Water', '2L', 160)">+</button>
+      <button class="add-btn" onclick="addToCart('Best water', '2L', 160)">+</button>
     </div>
   </div>
-  <div id="africa-section" class="brand-section">
-    <div class="brand-header">Africa Water – Clean & Safe</div>
+
+  <div id="top-section" class="brand-section">
+    <div class="brand-header">Top Water – Always Fresh</div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Africa Water', '0.3L', 140)">+</button>
+      <button class="add-btn" onclick="addToCart('Top water', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Africa Water', '0.6L', 150)">+</button>
+      <button class="add-btn" onclick="addToCart('Top water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Africa Water', '2L', 160)">+</button>
+      <button class="add-btn" onclick="addToCart('Top water', '2L', 160)">+</button>
     </div>
   </div>
-  <div id="yes-section" class="brand-section">
-    <div class="brand-header">Yes Water – Natural Taste</div>
+
+  <div id="daily-section" class="brand-section">
+    <div class="brand-header">Daily Water – Everyday Hydration</div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Yes Water', '0.3L', 140)">+</button>
+      <button class="add-btn" onclick="addToCart('Daily water', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Yes Water', '0.6L', 150)">+</button>
+      <button class="add-btn" onclick="addToCart('Daily water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Yes Water', '2L', 160)">+</button>
+      <button class="add-btn" onclick="addToCart('Daily water', '2L', 160)">+</button>
     </div>
   </div>
-  <div id="dega-section" class="brand-section">
-    <div class="brand-header">Dega Water – Mountain Fresh</div>
+
+  <div id="fine-section" class="brand-section">
+    <div class="brand-header">Fine Water – Premium Choice</div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Dega Water', '0.3L', 140)">+</button>
+      <button class="add-btn" onclick="addToCart('Fine water', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Dega Water', '0.6L', 150)">+</button>
+      <button class="add-btn" onclick="addToCart('Fine water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Dega Water', '2L', 160)">+</button>
+      <button class="add-btn" onclick="addToCart('Fine water', '2L', 160)">+</button>
     </div>
   </div>
-  <div id="fham-section" class="brand-section">
-    <div class="brand-header">Fham Water – Pure Natural</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Fham Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Fham Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Fham Water', '2L', 160)">+</button>
-    </div>
-  </div>
-  <div id="arki-section" class="brand-section">
-    <div class="brand-header">Arki Water – Mineral Rich</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button>
-    </div>
-  </div>
+
   <div id="cart-summary">
     <div class="cart-header">
       <h2>Your Cart</h2>
