--- a/index.html
+++ b/index.html
@@ -151,62 +151,24 @@
   </div>
 
   <div class="categories">
-    <div class="category-tile" onclick="showBrand('aquaddis')">
-      <img src="https://via.placeholder.com/60/0066FF/fff?text=Aqua" alt="Aquaddis">
-      <span>Aquaddis</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('best')">
-      <img src="https://via.placeholder.com/60/0066FF/fff?text=Best" alt="Best water">
-      <span>Best water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('top')">
-      <img src="https://via.placeholder.com/60/0066FF/fff?text=Top" alt="Top water">
-      <span>Top water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('daily')">
-      <img src="https://via.placeholder.com/60/0066FF/fff?text=Daily" alt="Daily water">
-      <span>Daily water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('fine')">
-      <img src="https://via.placeholder.com/60/0066FF/fff?text=Fine" alt="Fine water">
-      <span>Fine water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('gold')">
-      <img src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold">
-      <span>Gold Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('one')">
-      <img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One">
-      <span>One Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('africa')">
-      <img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa">
-      <span>Africa Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('yes')">
-      <img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes">
-      <span>Yes Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('dega')">
-      <img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega">
-      <span>Dega Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('fham')">
-      <img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham">
-      <span>Fham Water</span>
-    </div>
-    <div class="category-tile" onclick="showBrand('arki')">
-      <img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki">
-      <span>Arki Water</span>
-    </div>
+    <div class="category-tile" onclick="showBrand('aquaddis')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Aqua" alt="Aquaddis"><span>Aquaddis</span></div>
+    <div class="category-tile" onclick="showBrand('best')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Best" alt="Best water"><span>Best water</span></div>
+    <div class="category-tile" onclick="showBrand('top')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Top" alt="Top water"><span>Top water</span></div>
+    <div class="category-tile" onclick="showBrand('daily')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Daily" alt="Daily water"><span>Daily water</span></div>
+    <div class="category-tile" onclick="showBrand('fine')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Fine" alt="Fine water"><span>Fine water</span></div>
+    <div class="category-tile" onclick="showBrand('gold')"><img src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold"><span>Gold Water</span></div>
+    <div class="category-tile" onclick="showBrand('one')"><img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One"><span>One Water</span></div>
+    <div class="category-tile" onclick="showBrand('africa')"><img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa"><span>Africa Water</span></div>
+    <div class="category-tile" onclick="showBrand('yes')"><img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes"><span>Yes Water</span></div>
+    <div class="category-tile" onclick="showBrand('dega')"><img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega"><span>Dega Water</span></div>
+    <div class="category-tile" onclick="showBrand('fham')"><img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham"><span>Fham Water</span></div>
+    <div class="category-tile" onclick="showBrand('arki')"><img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki"><span>Arki Water</span></div>
   </div>
 
-  <!-- ─────────────────────────────────────────────── -->
-  <!--                Brand Sections                    -->
-  <!-- ─────────────────────────────────────────────── -->
+  <!-- Brand sections – all using same compact style -->
 
   <div id="aquaddis-section" class="brand-section">
-    <div class="brand-header">Aquaddis – Pure & Fresh</div>
+    <div class="brand-header">Aquaddis</div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Aquaddis', '0.3L', 140)">+</button>
@@ -222,25 +184,84 @@
   </div>
 
   <div id="best-section" class="brand-section">
-    <div class="brand-header">Best Water – Quality First</div>
+    <div class="brand-header">Best Water</div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Best water', '0.3L', 140)">+</button>
+      <button class="add-btn" onclick="addToCart('Best Water', '0.3L', 140)">+</button>
     </div>
-    <!-- 0.6L and 2L same as above -->
     <div class="variant">
       <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Best water', '0.6L', 150)">+</button>
+      <button class="add-btn" onclick="addToCart('Best Water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
       <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Best water', '2L', 160)">+</button>
+      <button class="add-btn" onclick="addToCart('Best Water', '2L', 160)">+</button>
     </div>
   </div>
 
-  <!-- You can keep the other existing brands (top, daily, fine, gold) as they are -->
+  <div id="top-section" class="brand-section">
+    <div class="brand-header">Top Water</div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Top Water', '0.3L', 140)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Top Water', '0.6L', 150)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Top Water', '2L', 160)">+</button>
+    </div>
+  </div>
 
-  <!-- New brands with 140/150/160 pricing -->
+  <div id="daily-section" class="brand-section">
+    <div class="brand-header">Daily Water</div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Daily Water', '0.3L', 140)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Daily Water', '0.6L', 150)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Daily Water', '2L', 160)">+</button>
+    </div>
+  </div>
+
+  <div id="fine-section" class="brand-section">
+    <div class="brand-header">Fine Water</div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Fine Water', '0.3L', 140)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Fine Water', '0.6L', 150)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Fine Water', '2L', 160)">+</button>
+    </div>
+  </div>
+
+  <div id="gold-section" class="brand-section">
+    <div class="brand-header">Gold Water</div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button>
+    </div>
+    <div class="variant">
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button>
+    </div>
+  </div>
 
   <div id="one-section" class="brand-section">
     <div class="brand-header">One Water</div>
@@ -338,7 +359,7 @@
     </div>
   </div>
 
-  <!-- Cart -->
+  <!-- Cart summary -->
   <div id="cart-summary">
     <div class="cart-header">
       <h2>Your Cart</h2>
@@ -433,7 +454,7 @@
         grand += lt;
       });
       text += `\nTotal: ${grand} Birr`;
-      alert(text + "\n\n(Contact seller for delivery!)");
+      alert(text + "\n\n(Contact seller for delivery in Waliso!)");
       setTimeout(() => {
         alert("Order placed! Thank you! 💧");
         cart = [];
@@ -441,7 +462,6 @@
       }, 800);
     });
 
-    // Init
     renderCart();
   </script>
 
