--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
   </div>
 
   <div class="categories">
-    <div class="category-tile" onclick="showBrand('aquaddis')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Aqua" alt="Aquaddis"><span>Aquaddis</span></div>
-    <div class="category-tile" onclick="showBrand('best')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Best" alt="Best water"><span>Best water</span></div>
-    <div class="category-tile" onclick="showBrand('top')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Top" alt="Top water"><span>Top water</span></div>
-    <div class="category-tile" onclick="showBrand('daily')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Daily" alt="Daily water"><span>Daily water</span></div>
-    <div class="category-tile" onclick="showBrand('fine')"><img src="https://via.placeholder.com/60/0066FF/fff?text=Fine" alt="Fine water"><span>Fine water</span></div>
+    <div class="category-tile" onclick="showBrand('aquaddis')"><img src="https://i.postimg.cc/dVD0gdmt/aquaddis.webp" alt="Aquaddis"><span>Aquaddis</span></div>
+    <div class="category-tile" onclick="showBrand('best')"><img src="https://i.postimg.cc/bYFW3tJV/forest.webp" alt="Forest water"><span>Forest water</span></div>
+    <div class="category-tile" onclick="showBrand('top')"><img src="https://i.postimg.cc/4dGs4htb/top.webp" alt="Top water"><span>Top water</span></div>
+    <div class="category-tile" onclick="showBrand('daily')"><img src="https://i.postimg.cc/TYMSzXV0/kiya.webp" alt="Kiya water"><span>Kiya water</span></div>
+    <div class="category-tile" onclick="showBrand('fine')"><img src="https://i.postimg.cc/9McHHHH5/sport.webp" alt="Sport water"><span>Sport water</span></div>
     <div class="category-tile" onclick="showBrand('gold')"><img src="https://i.postimg.cc/xTXcXRGR/gold-water-image.webp" alt="Gold"><span>Gold Water</span></div>
     <div class="category-tile" onclick="showBrand('one')"><img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One"><span>One Water</span></div>
     <div class="category-tile" onclick="showBrand('africa')"><img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa"><span>Africa Water</span></div>
