--- a/index4.html
+++ b/index4.html
@@ -147,7 +147,7 @@
   </header>
 
   <div class="search-bar">
-    <input type="text" placeholder="Search water brands..." disabled>
+    <input type="text" placeholder="Search water by price or brand..." disabled>
   </div>
 
   <div class="categories">
@@ -170,15 +170,15 @@
   <div id="aquaddis-section" class="brand-section">
     <div class="brand-header">Aquaddis</div>
     <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L/Pack</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Aquaddis', '0.3L', 140)">+</button>
+      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
+      <button class="add-btn" onclick="addToCart('Aquaddis', '0.3L/Pack', 140)">+</button>
     </div>
     <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L/Pack</div><div class="variant-price">150 Birr</div></div>
+      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Aquaddis', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L/Pack</div><div class="variant-price">160 Birr</div></div>
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Aquaddis', '2L', 160)">+</button>
     </div>
   </div>
@@ -238,11 +238,11 @@
       <button class="add-btn" onclick="addToCart('Fine Water', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L/Pack</div><div class="variant-price">150 Birr</div></div>
+      <div class="variant-info"><div class="variant-size">0.6L/</div><div class="variant-price">150 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Fine Water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L/Pack</div><div class="variant-price">160 Birr</div></div>
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Fine Water', '2L', 160)">+</button>
     </div>
   </div>
