--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
   <div id="aquaddis-section" class="brand-section">
     <div class="brand-header">Aquaddis</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/Pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '2L', 160)">+</button></div>
 
